中英文版本实现 添加及显示
中英文版本实现 添加及显示

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    //Layout = null;
 }
 
 <div class="jumbotron">
@@ -8,10 +9,13 @@
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
+
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
+            @Helper.HelloWerld()<br />
+            
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
